@@ -7,3 +7,5 @@ auto*.cache
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^\.github/workflows/R-CMD-check\.yaml$
+^cran-comments\.md$
+^revdep$
