@@ -1,0 +1,28 @@
+# Platform
+
+|field    |value                        |
+|:--------|:----------------------------|
+|version  |R version 3.6.2 (2019-12-12) |
+|os       |macOS Mojave 10.14.6         |
+|system   |x86_64, darwin15.6.0         |
+|ui       |RStudio                      |
+|language |(EN)                         |
+|collate  |en_US.UTF-8                  |
+|ctype    |en_US.UTF-8                  |
+|tz       |America/New_York             |
+|date     |2020-02-17                   |
+
+# Dependencies
+
+|package |old    |new    |Δ  |
+|:-------|:------|:------|:--|
+|Rcsdp   |0.1.55 |0.1.55 |NA |
+
+# Revdeps
+
+## Failed to check (1)
+
+|package   |version |error |warning |note |
+|:---------|:-------|:-----|:-------|:----|
+|Rdimtools |0.4.2   |1     |        |     |
+
