@@ -1,0 +1,57 @@
+# Rdimtools
+
+<details>
+
+* Version: 0.4.2
+* Source code: https://github.com/cran/Rdimtools
+* URL: http://github.com/kisungyou/Rdimtools
+* BugReports: http://github.com/kisungyou/Rdimtools/issues
+* Date/Publication: 2018-12-21 14:00:06 UTC
+* Number of recursive dependencies: 30
+
+Run `revdep_details(,"Rdimtools")` for more info
+
+</details>
+
+## In both
+
+*   checking whether package ‘Rdimtools’ can be installed ... ERROR
+    ```
+    Installation failed.
+    See ‘/Users/hcorrada/Projects/rcsdp/revdep/checks.noindex/Rdimtools/new/Rdimtools.Rcheck/00install.out’ for details.
+    ```
+
+## Installation
+
+### Devel
+
+```
+Bioconductor version 3.10 (BiocManager 1.30.10), ?BiocManager::install for help
+Loading required package: RColorBrewer
+* installing *source* package ‘Rdimtools’ ...
+** package ‘Rdimtools’ successfully unpacked and MD5 sums checked
+** using staged installation
+** libs
+clang++ -std=gnu++11 -I"/Library/Frameworks/R.framework/Resources/include" -DNDEBUG  -I"/Users/hcorrada/Projects/rcsdp/revdep/library.noindex/Rdimtools/Rcpp/include" -I"/Users/hcorrada/Projects/rcsdp/revdep/library.noindex/Rdimtools/RcppArmadillo/include" -isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk -I/usr/local/include -fopenmp -fPIC  -Wall -g -O2  -c RcppExports.cpp -o RcppExports.o
+clang: error: unsupported option '-fopenmp'
+make: *** [RcppExports.o] Error 1
+ERROR: compilation failed for package ‘Rdimtools’
+* removing ‘/Users/hcorrada/Projects/rcsdp/revdep/checks.noindex/Rdimtools/new/Rdimtools.Rcheck/Rdimtools’
+
+```
+### CRAN
+
+```
+Bioconductor version 3.10 (BiocManager 1.30.10), ?BiocManager::install for help
+Loading required package: RColorBrewer
+* installing *source* package ‘Rdimtools’ ...
+** package ‘Rdimtools’ successfully unpacked and MD5 sums checked
+** using staged installation
+** libs
+clang++ -std=gnu++11 -I"/Library/Frameworks/R.framework/Resources/include" -DNDEBUG  -I"/Users/hcorrada/Projects/rcsdp/revdep/library.noindex/Rdimtools/Rcpp/include" -I"/Users/hcorrada/Projects/rcsdp/revdep/library.noindex/Rdimtools/RcppArmadillo/include" -isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk -I/usr/local/include -fopenmp -fPIC  -Wall -g -O2  -c RcppExports.cpp -o RcppExports.o
+clang: error: unsupported option '-fopenmp'
+make: *** [RcppExports.o] Error 1
+ERROR: compilation failed for package ‘Rdimtools’
+* removing ‘/Users/hcorrada/Projects/rcsdp/revdep/checks.noindex/Rdimtools/old/Rdimtools.Rcheck/Rdimtools’
+
+```
